--- a/app/sass/modules/_footer.sass
+++ b/app/sass/modules/_footer.sass
@@ -26,6 +26,11 @@
 
 	// Intro
 	&-intro
+		.logo
+			a
+				display: inline-block
+			img
+				max-width: 220px
 
 		.stores
 			+mt(24)
@@ -141,3 +146,4 @@
 	&-copyright
 		padding-top: 24px
 		padding-bottom: 24px
+
