--- a/app/sass/modules/_shop.sass
+++ b/app/sass/modules/_shop.sass
@@ -263,6 +263,9 @@
 			flex: 1 1 auto
 			margin-left: 4px
 	&-list
+		overflow-y: auto
+		max-height: 234px
+		padding-bottom: 2px
 		.form-checkbox
 			&:last-child
 				margin-bottom: 0
