Collection single page brands alphabet. CSS fixes

--- a/app/sass/components/_popovers.sass
+++ b/app/sass/components/_popovers.sass
@@ -1,6 +1,6 @@
 /* ==========================================================================
-	 Popover customize
-	 ========================================================================== */
+ Popover customize
+ ========================================================================== */
 .popover
 	border-radius: 0
 	border: 0
@@ -24,10 +24,9 @@
 		&::after
 			display: none
 
-
 /* ==========================================================================
-	 Brands header popover
-	 ========================================================================== */
+ Brands header popover
+ ========================================================================== */
 .popover-brands
 	max-width: 870px
 	+mt(24)
@@ -35,14 +34,11 @@
 		padding: 20px 12px
 		ul
 			width: 100%
-			display: flex
-			flex-wrap: wrap
+			column-count: 4
 			> li
-				flex: 0 0 25%
 				padding-left: 12px
 				padding-right: 12px
 				> a
 					display: inline-block
 					padding-top: 4px
 					padding-bottom: 4px
-
