--- a/app/sass/pages/_collection.sass
+++ b/app/sass/pages/_collection.sass
@@ -245,3 +245,6 @@
 				+media-breakpoint-down(xs)
 					flex-basis: 100%
 					max-width: 100%
+			.card-product .card-photo img
+				object-position: center bottom
+				transform-origin: center bottom
