--- a/app/sass/components/_cards.sass
+++ b/app/sass/components/_cards.sass
@@ -13,6 +13,7 @@
 		margin-top: 16px
 		.permalink
 			display: inline-block
+			padding-right: 20px
 			word-break: break-word
 
 /* ==========================================================================
@@ -257,6 +258,10 @@
 				transform-origin: center bottom
 
 	.card-meta
+		.permalink
+			+media-breakpoint-down(xs)
+				font-size: 14px
+				line-height: 22px
 		.product-country
 			+mt(16)
 		.product-price
