Show all collection products tab

--- a/app/sass/pages/_collection.sass
+++ b/app/sass/pages/_collection.sass
@@ -238,6 +238,7 @@
 						position: relative
 						z-index: 2
 		&-list
+			margin-bottom: 0
 			> [class*="col-12"]
 				+media-breakpoint-down(sm)
 					flex-basis: 50%
