--- a/app/sass/common/_base.sass
+++ b/app/sass/common/_base.sass
@@ -94,6 +94,11 @@ hr
 	bottom: 0
 	z-index: 9
 	background-color: rgba($white, 0.8)
+	visibility: hidden
+	opacity: 0
+	&._is-active
+		opacity: 1
+		visibility: visible
 	&-spinner
 		width: 32px
 		height: 32px
@@ -103,7 +108,7 @@ hr
 		margin-left: -16px
 		margin-top: -16px
 		box-sizing: border-box
-		border: 3px solid $text-200
+		border: 3px solid $orange
 		border-radius: 50%
 		border-top-color: $trsp
 		transform-origin: 50%
