Input for cart item quantity

--- a/app/sass/pages/_cart.sass
+++ b/app/sass/pages/_cart.sass
@@ -131,8 +131,12 @@
 						padding: 3px
 					&-amount
 						.value
+							height: auto
+							flex: 0 0 98px
+							border-bottom: 0
 							font-size: 15px
 							line-height: 20px
+							text-align: center
 
 			.units,
 			.packages
