--- a/app/sass/pages/_product.sass
+++ b/app/sass/pages/_product.sass
@@ -100,33 +100,36 @@
 			&-form
 				.price
 					display: flex
-					align-items: center
+					align-items: flex-end
 					justify-content: space-between
 					+media-breakpoint-down(xs)
 						flex-wrap: wrap
 						align-items: flex-start
 					&-main
 						display: flex
-						flex-wrap: wrap
-						align-items: flex-end
+						flex-direction: column
 						margin-bottom: 24px
 						+media-breakpoint-down(xs)
 							flex: 0 0 100%
+							flex-direction: row
+							flex-wrap: wrap
+							align-items: flex-end
 							justify-content: space-between
 							margin-bottom: 16px
 						.label
 							padding-right: 4px
 							color: $text-300
-							+font-size(md)
+							+font-size(sm)
 						.value
 							color: $text-300
 							+font-size(md)
 							> span
 								color: $text-200
-								+font-size(xxl)
+								font-size: 30px
+								line-height: 34px
 								word-break: break-all
 					&-quantity
-						margin-left: 32px
+						margin-left: 16px
 						margin-bottom: 24px
 						+media-breakpoint-down(xs)
 							margin-left: 0
@@ -134,6 +137,7 @@
 						.quantity-amount
 							.value
 								flex: 0 0 98px
+								height: auto
 								border-bottom: 0
 								text-align: center
 						.quantity-size
