Added phone in sticky header. Added Fancybox video in top header & mobile menu. Update npm packages

--- a/app/sass/modules/_mmenu.sass
+++ b/app/sass/modules/_mmenu.sass
@@ -256,6 +256,7 @@
 						font-size: 15px
 						&:hover
 							color: $orange
+					&.video,
 					&.project
 						> a
 							display: inline-flex
