--- a/app/sass/modules/_header.sass
+++ b/app/sass/modules/_header.sass
@@ -37,7 +37,7 @@
 					margin-right: 56px
 					&-form
 						max-width: 100%
-			.contacts
+			.contacts-item--mail
 				display: none
 		.header-bottom
 			display: none
@@ -87,15 +87,16 @@
 					display: inline-flex
 					align-items: center
 					&:not(:last-child)
-						margin-right: 32px
+						margin-right: 24px
 					> a
 						padding-top: 6px
 						padding-bottom: 6px
 						color: $text-300
-						font-size: 15px
+						font-size: 14px
 						line-height: 1
 						&:hover
 							color: $orange
+					&.video,
 					&.project
 						> a
 							display: inline-flex
@@ -106,7 +107,8 @@
 								height: 17px
 								margin-right: 8px
 							span
-								+font-size(sm)
+								font-size: 14px
+								line-height: 1.15
 							&:hover
 								color: $text-200
 					&.has-dropdown
@@ -221,7 +223,7 @@
 			margin-left: 20px
 			+media-breakpoint-down(xl)
 				margin-left: 28px
-			+media-breakpoint-down(md)
+			+media-breakpoint-down(lg)
 				display: none
 			.dropdown.show
 				.btn.btn-corner
@@ -241,11 +243,10 @@
 			margin-left: 48px
 			margin-right: 42px
 			+media-breakpoint-down(xl)
-				margin-left: 66px
-				margin-right: 56px
-			+media-breakpoint-down(lg)
 				margin-left: 42px
-				margin-right: 26px
+				margin-right: 18px
+			+media-breakpoint-down(lg)
+				margin-left: 32px
 			+media-breakpoint-down(md)
 				position: static
 				margin-left: 0
@@ -290,7 +291,7 @@
 				position: relative
 				display: flex
 				align-items: center
-				max-width: 300px
+				max-width: 360px
 				height: 56px
 				border-bottom: 1px solid $border
 				transition: max-width .45s
@@ -443,6 +444,9 @@
 						display: block
 						color: $text-400
 						letter-spacing: 0.04em
+					.products-list
+						overflow-y: auto
+						max-height: 40vh
 					.products-item
 						display: flex
 						margin-top: 16px
@@ -467,13 +471,18 @@
 		// Contacts (phone, email)
 		.contacts
 			display: flex
-			align-items: flex-end
+			align-items: center
 			margin-right: 32px
 			+media-breakpoint-down(xl)
+				margin-right: 18px
+			+media-breakpoint-down(md)
 				display: none
 			&-item
 				&:not(:last-child)
 					margin-right: 24px
+				&--mail
+					+media-breakpoint-down(xl)
+						display: none
 
 			.phone
 				display: flex
@@ -507,6 +516,9 @@
 						color: $orange
 
 			.mail
+				> span
+					display: block
+					line-height: 1.3
 				> a
 					color: $text-300
 					+font-size(sm)
