--- a/app/sass/modules/_mmenu.sass
+++ b/app/sass/modules/_mmenu.sass
@@ -71,6 +71,29 @@
 					color: $text-300
 					+font-size(xs)
 
+		// Locations
+		.locations
+			margin-bottom: 16px
+			&-btn
+				display: flex
+				height: auto
+				padding-left: 0
+				padding-right: 0
+				&:hover
+					> span
+						color: $orange
+				> .icon
+					flex: 0 0 auto
+					width: 17px
+					height: 17px
+					fill: $orange
+				> span
+					margin-left: 8px
+					padding-bottom: 2px
+					border-bottom: 1px dashed $orange
+					font-size: 14px
+					transition: color $trs
+
 		// Catalog navigation
 		.catalog
 			margin-bottom: 32px
