'Sold off' Product plate

--- a/app/sass/pages/_product.sass
+++ b/app/sass/pages/_product.sass
@@ -19,11 +19,14 @@
 			.out-of-stock
 				color: $text-400
 		.sold-off
+			max-width: 320px
 			margin-top: 24px
+			margin-left: auto
+			margin-right: auto
 			padding: 24px 48px
-			border: 2px solid $orange
-			background-color: $bg
-			color: $orange
+			border: 4px solid #ff2c2c
+			color: #ff2c2c
+			+font-size(md)
 			font-weight: $w-bold
 			text-transform: uppercase
 			text-align: center
